--- a/index.html
+++ b/index.html
@@ -5,14 +5,58 @@
       <title>Заголовок страницы</title>
    </head>
    <body>
-        <h1> Света Нес </h1>
+        <h1>Муся Татарович</h1>
         <h2> умная и красивая </h2>
         <p>Если б я был одним из семи дней недели, 
-        то я был бы вторником - это понятно, 
-        не таким ненавистным, как понедельник, 
-        но и желанным вряд ли</p>
-        <p>Все исчезло давно в папироном дыму, лишь мигает звезда из полночного мрака.
-            Не набить ли мне морду себе самому? И не сесть ли потом на пять суток за драку? </p>
-        <p>Всякое творчество есть по сути своей молитва</p>    
-   </body>
+        <br> то я был бы вторником - это понятно, 
+        <br> не таким ненавистным, как понедельник, 
+        <br>но и желанным вряд ли
+        <br>(Иван Пинженин)</p>
+        <p>Все исчезло давно в папироном дыму,
+        <br>лишь мигает звезда из полночного мрака.
+        <br>Не набить ли мне морду себе самому? 
+        <br>И не сесть ли потом на пять суток за драку?
+        <br>(Сергей Довлатов) </p>
+        <p>Всякое творчество есть по сути своей молитва (Иосиф Бродский)</p>   
+        <img width=700px src="https://pp.userapi.com/c837438/v837438923/6788e/nondy4o5oBg.jpg"> 
+        <br> <a href="https://vk.com/id281537923" target="blank"> Ссылка на VK </a>   
+        <br> <ul><li>EAT</li><LI>SLEEP</LI><LI>iPHONE</LI><LI>REPEAT</LI></ul>
+        <BR> <OL><LI>EAT</LI><LI>SLEEP</LI><LI>iPHONE</LI><LI>REPEAT</LI></OL>
+        <BR> <table border="1">
+                <tr>
+                  <td colspam="2">"Simpsons"</td>    
+                  <td colspam="2">Мэтт Гроунинг</td>    
+                  <td colspam="2">1989-...</td>
+                </tr>
+                <tr>
+                  <td colspam="2">"Californication"</td>    
+                  <td colspam="2">Дэвид Фон Энкен</td>    
+                  <td colspam="2">2007</td>
+                </tr>
+                <tr>
+                  <td colspam="2">"Gossip girl"</td>    
+                  <td colspam="2">Марк Пизнарский</td>    
+                  <td colspam="2">2007</td>
+                      </tr>
+            </table>
+        <br="2"> <br> <label>Логин</label>
+             <input type="text">
+             <br><br>
+             <label>Пароль</label>
+             <input type="text">
+             <br><br>
+             <label>Фамилия и имя</label>
+             <input type="text">
+             <br><br>
+             <label>Никнейм</label>
+             <input type="text">
+             <br><br>
+             <label>На все согласен</label>
+             <input type="checkbox">
+             <br><br>
+             <button>Регистрация</button>
+             <br><br>
+        
+    
+        </body>
 </html>
