--- a/index.html
+++ b/index.html
@@ -56,6 +56,25 @@
              <br><br>
              <button>Регистрация</button>
              <br><br>
+
+        <form method="GET" action="index.html/carbonara"> 
+             <h1>Карбонара</h1>
+             <input type="text" placeholder="Спагетти" name="spagetti">
+             <br>
+             <input type="text" placeholder="Бекон" name="bakon">
+             <br>
+             <input type="text" placeholder="Сливки" name="cream">
+             <br>
+             <input type="text" placeholder="Желтки" name="egg">
+             <br>
+             <input type="text" placeholder="Сыр" name="cheese">
+             <br>
+             <input type="checkbox">
+             <label>Солить?</label>
+             <br>
+             <button type="submit" >Приготовить</button>
+
+        </form>
         
     
         </body>
